Update project for Java 21 (#25)
* Update project for Java 21

* Ensure Java 21 toolchain and docker build

* Update GitHub workflows for Java 21

* Fix Lombok compilation on Java 21

* Update Lombok for Java 21

* Update Groovy and surefire for Java 21

* Use stable surefire plugin version

* Use Apache Groovy BOM

* Improve Java 21 test runtime